--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'WorkSansRegular';
-    src: url('../fonts/WorkSans-Regular.woff') format('woff2'),
+    src: url('../fonts/WorkSans-Regular.woff2') format('woff2'),
         url('../fonts/WorkSans-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
