--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -30,6 +30,7 @@ footer{
    width: 100%;
    margin: 0px auto;
    padding: 0px 30px;
+   padding-top: 40px;
    @media screen and (min-width:834px){
       max-width: 1200px;
       width: 100%;
