--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -36,6 +36,7 @@ footer{
       width: 100%;
       margin: 0px auto;
       padding: 0px 72px;
+      padding-top: 40px;
    }
    @media screen and (min-width:1280px){
       max-width: 1920px;
