--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $bg: #2B2B2B;
 $primaryColor: #A259FF;
+$bgSecondary: #3B3B3B;
 $fontColor: #fff;
 $fontSubColor: #858584;
 $footercolor: #CCCCCC;
