--- a/styles/_join.scss
+++ b/styles/_join.scss
@@ -109,6 +109,9 @@
             width: 100%;
             position: relative;
             display: inline-flex;
+            .join-section__input{
+              position: relative;
+            }
             input{
               width: 420px;
               padding: 19px 20px;
@@ -122,7 +125,7 @@
             padding: 19px 50px 19px 50px;
             position: absolute;
             right: 0;
-
+            top: 0;
           }
         }
       }
