--- a/styles/style.css
+++ b/styles/style.css
@@ -855,17 +855,17 @@ footer {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
+  padding: 40px;
 }
 .join-section__holder {
   display: flex;
   flex-direction: column;
-  padding: 40px 0;
-  gap: 30px;
+  align-items: center;
 }
-.join-section__holder .join-section__image {
-  height: 255px;
-  background: url("../images/mobile/spaceMobile.jpg") center/100% 100% no-repeat;
+.join-section__holder .join-section__image img {
   border-radius: 22px;
+  margin-bottom: 30px;
 }
 .join-section__holder .join-section__info--title {
   font-family: "WorkSansSemiBold", sans-serif;
@@ -904,12 +904,10 @@ footer {
   fill: #fff;
 }
 @media screen and (min-width: 834px) {
-  .join-section {
-    height: 480px;
-  }
   .join-section__shell {
-    height: 360px;
-    width: calc(100vw - 142px);
+    max-width: 1050px;
+    margin: 0 auto;
+    display: flex;
     background-color: #3B3B3B;
     padding: 0 30px;
     border-radius: 20px;
@@ -917,13 +915,11 @@ footer {
   .join-section__shell .join-section__holder {
     flex-direction: row;
     align-items: center;
+    display: flex;
+    gap: 30px;
   }
   .join-section__shell .join-section__holder .join-section__image {
-    height: 280px;
-    max-width: 400px;
-    background: url("../images/tablet/spaceTablet.jpg") center/100% 100% no-repeat;
-    border-radius: 22px;
-    width: 100%;
+    padding: 40px 0 0;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -931,19 +927,18 @@ footer {
     height: 550px;
   }
   .join-section__shell {
-    height: 430px;
-    padding: 0 60px;
-    width: calc(100vw - 230px);
+    padding: 60px;
     display: flex;
     align-items: center;
   }
-  .join-section__shell .join-section__holder {
-    gap: 80px;
-  }
   .join-section__shell .join-section__holder .join-section__image {
-    height: 310px;
-    width: 425px;
-    background: url("../images/desktop/space.jpg") center/100% 100% no-repeat;
+    padding: 0;
+  }
+  .join-section__shell .join-section__holder .join-section__image img {
+    margin: 0;
+  }
+  .join-section__shell .join-section__holder .join-section__info {
+    max-width: 47%;
   }
   .join-section__shell .join-section__holder .join-section__info--title {
     font-size: 38px;
